--- a/config/imprint.conf
+++ b/config/imprint.conf
@@ -1,5 +1,5 @@
 CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
+#CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_SLEEP=n
 CONFIG_ZMK_IDLE_TIMEOUT=300000
 CONFIG_PMW3610_REST3_SAMPLE_TIME_MS=200
